etc/kubernetes/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector: 
    matchLabels: 
      app: redis
  template:
    metadata: 
      labels: 
        app: redis
    spec:
      containers: 
        -
          image: redis:latest
          name: redis
          ports: 
            -
              containerPort: 6379
          volumeMounts:
            -
              mountPath: /data
              name: redis
      volumes:
        -
          name: redis
          persistentVolumeClaim:
            claimName: redis
