etc/kubernetes/webui-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: webui
spec:
  ingress:
    -
      ports:
        -
          port: 8080
  podSelector:
    matchLabels:
      app: webui
